# slam

./: .gitignore  AGENTS.md  LICENSE  README.cn.md  README.en.md  README.md
deploy/: .env.example  docker-compose.yml
deploy/config/: app.container.yml  nginx.conf
deploy/dockerhub/: docker-compose.yml
deploy/server/: Dockerfile
deploy/web/: Dockerfile
slam_server/: .gitignore  AGENTS.md  Cargo.toml  sport.db  start.sh
slam_server/config/: app.yml
slam_server/examples/: mock_ai_server.rs
slam_server/macros/: Cargo.toml
slam_server/macros/src/: lib.rs
slam_server/src/: lib.rs  main.rs
slam_server/src/app/: mod.rs  routes.rs  setup.rs
slam_server/src/config/: mod.rs
slam_server/src/dao/: cache.rs  database.rs  entities.rs  idl.rs  memory_cache.rs  mod.rs  seaorm_impl.rs  sport_dao.rs  sqlite_impl.rs  sqlite_sport_dao.rs
slam_server/src/dao/cache/: memory.rs  mod.rs
slam_server/src/dao/repository/: ai_job.rs  compat.rs  mod.rs  schema.rs  sport.rs  user.rs
slam_server/src/handlers/: ai_handler.rs  ai_job_handler.rs  jwt.rs  mod.rs  response.rs  sport_handler.rs  user_handler.rs
slam_server/src/model/: ai_job.rs  mod.rs  sport.rs  sport_db.rs  sport_runtime.rs  sport_xml.rs  user.rs
slam_server/src/service/: ai_job_service.rs  ai_job_worker.rs  ai_service.rs  common.rs  image_service.rs  llm.rs  mod.rs  sport_service.rs  test_api_key.rs  user_service.rs
slam_server/tests/: ai_job_api_tests.rs  api_tests.rs  test.csv  test.db  tests.rs
slam_web/: .browserslistrc  .gitignore  AGENTS.md  biome.json  capacitor.config.ts  modern.config.ts  package-lock.json  package.json  pnpm-lock.yaml
slam_web/android/: .gitignore  AGENTS.md  capacitor.settings.gradle
slam_web/android/app/: build.gradle
slam_web/android/app/src/main/: AndroidManifest.xml
slam_web/android/app/src/main/java/com/slam/web/: MainActivity.java
slam_web/android/app/src/main/res/layout/: activity_main.xml
slam_web/android/app/src/main/res/values/: strings.xml
slam_web/scripts/: compress_web_dist.sh  release.sh
slam_web/src/: i18n.ts
slam_web/src/components/: PageBase.tsx
slam_web/src/components/ai/: AIJobCard.tsx  AIJobImageStrip.tsx  AIJobList.tsx
slam_web/src/components/common/: ImagePickerCard.tsx  ImagePreviewDialog.tsx  PageHeader.tsx  ResponsiveButton.tsx  ResponsiveInput.tsx  SportCalendar.tsx  SportField.tsx  SportListTitle.tsx
slam_web/src/components/home/: AvatarEditor.tsx  HomeHeader.tsx  Settings.tsx  SidebarNavItem.tsx  Sporting.tsx  Stats.tsx
slam_web/src/components/sport/: ExtraConfig.ts  SportBasicInfo.tsx  SportExtraInfo.tsx  SportList.tsx  SportTracks.tsx  TrackDialog.tsx  TrackItem.tsx
slam_web/src/components/stats/: Stats.tsx  StatsBarCard.tsx  StatsFilterSection.tsx  StatsSection.tsx  SummaryStats.tsx  TypeBucketsChart.tsx
slam_web/src/hooks/: useAndroidDoubleBackExit.ts  useUnifiedBack.ts
slam_web/src/routes/: home.css  index.css  page.tsx
slam_web/src/routes/addsports/: page.tsx
slam_web/src/routes/addsports/submit/: page.tsx
slam_web/src/routes/ai/jobs/: page.tsx
slam_web/src/routes/login/: login.css  page.tsx
slam_web/src/routes/register/: page.tsx  register.css
slam_web/src/routes/sport/detail/: page.tsx
slam_web/src/services/: aiJob.ts  axiosCapacitorAdapter.ts  http.ts  sport.ts  user.ts
slam_web/src/services/capacitor/: axiosAdapter.ts  cookie.ts
slam_web/src/stores/: lang.ts  user.ts
slam_web/src/types/: assets.d.ts
slam_web/src/utils/: notify.ts  swimming.ts  time.ts
