[package]
name = "slam_server"
version = "0.5.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["multipart", "typed-header"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# AI服务所需的额外依赖
reqwest = { version = "0.12.5", features = ["json", "rustls-tls", "multipart"] }
futures-util = "0.3.30"
rand = { version = "0.8", features = ["std_rng"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures = "0.3"
utoipa = { version = "4.0.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum", "debug-embed"] }
# 图片处理依赖
image = "0.24"
base64 = "0.21"
# XML 解析依赖
quick-xml = { version = "0.31", features = ["serialize"] }
async-trait = "0.1"
serde_yaml = "0.9"
aes = "0.8"
cbc = "0.1"
cipher = { version = "0.4", features = ["block-padding"] }
sha2 = "0.10"
jsonwebtoken = "9"
headers = "0.4"
ctx_marco = { path = "macros", package = "ctx-marco" }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "macros", "runtime-tokio-rustls"] }
